--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "vite",
     "server": "vite preview",
+    "build": "vite build",
     "build:dev": "vite build --mode dev",
     "build:stg": "vite build --mode stg",
     "build:prod": "vite build --mode prod",
